@@ -36,7 +36,7 @@ WriteMakefile(
 		'Cwd' => 0,
 		'Carp' => 0,
 		'Socket' => 0,
-		'List::Member' => 0,
+		'List::MoreUtils' => 0,
 		'HTTP::BrowserDetect' => 3.10,	# Include bingbot
 		'File::Basename' => 0,
 		'String::Clean::XSS' => 0,
