@@ -10,6 +10,7 @@ use 5.006_001;
 use Log::Any qw($log);
 use Cwd;
 use JSON::Parse;
+use List::MoreUtils;	# Can go when expect goes
 
 use namespace::clean;
 
@@ -76,6 +77,10 @@ sub new {
 
 	my %args = (ref($_[0]) eq 'HASH') ? %{$_[0]} : @_;
 
+	if($args{expect} && (ref($args{expect}) ne 'ARRAY')) {
+		warn 'expect must be a reference to an array';
+		return;
+	}
 	return bless {
 		# _script_name => undef,
 		# _script_path => undef,
@@ -474,7 +479,11 @@ sub params {
 		$self->{_allow} = $args{allow};
 	}
 	if(defined($args{expect})) {
-		$self->{_expect} = $args{expect};
+		if(ref($args{expect}) eq 'ARRAY') {
+			$self->{_expect} = $args{expect};
+		} else {
+			$self->_warn({ warning => 'expect must be a reference to an array' });
+		}
 	}
 	if(defined($args{upload_dir})) {
 		$self->{_upload_dir} = $args{upload_dir};
@@ -673,11 +682,6 @@ sub params {
 		return;
 	}
 
-	# Can go when expect has been removed
-	if($self->{_expect}) {
-		require List::Member;
-		List::Member->import();
-	}
 	require String::Clean::XSS;
 	String::Clean::XSS->import();
 	# require String::EscapeCage;
@@ -719,7 +723,7 @@ sub params {
 			}
 		}
 
-		if($self->{_expect} && (member($key, @{$self->{_expect}}) == nota_member())) {
+		if($self->{_expect} && (List::MoreUtils::none { $_ eq $key } @{$self->{_expect}})) {
 			next;
 		}
 		$value = $self->_sanitise_input($value);
@@ -1321,7 +1325,7 @@ sub is_robot {
 			# Mine
 			'http://www.seokicks.de/robot.html',
 		);
-		if(($referrer =~ /\)/) || (grep(/^$referrer/, @crawler_lists))) {
+		if(($referrer =~ /\)/) || (List::MoreUtils::any { $_ =~ /^$referrer/ } @crawler_lists)) {
 			if($self->{_logger}) {
 				$self->{_logger}->debug("is_robot: blocked trawler $referrer");
 			}
